@@ -1,18 +1,25 @@
-## Getting Started
+# JavaFXCMS 🔥🤘🚀
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+---
 
-## Folder Structure
+## 👉 Sample screenshots taken from the CM system
 
-The workspace contains two folders by default, where:
+<img src="images/main page.png" alt="Home - Screen" width="400"/><br>
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+<img src="images/loginpage.png" alt="Playing - Screen" width="400"/><br>
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
 
-## Dependency Management
+## 👉 Requirements
 
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+- JDK - 17.0.2
+- JavaFX SDK - 17.0.2
+- mysql-connector-java-8.0.28
+- Scene Builder
+
+## vmArgs Setup
+
+```
+--module-path /path/to/javafx-sdk-17.0.2/lib --add-modules javafx.controls,javafx.media
+```
+
